--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.11"
 dependencies = [
     "dotenv>=0.9.9",
     "openai>=1.93.1",
+    "pandas>=2.3.1",
+    "pyyaml>=6.0.2",
 ]
